[package]
name = "mcutie"
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Mossop/mcutie"
description = "A no-std, no-alloc, opinionated MQTT client for IoT devices"

[features]
default = ["homeassistant"]
homeassistant = ["serde"]
serde = ["dep:serde", "dep:serde-json-core"]
defmt = ["dep:defmt", "embassy-net/defmt"]
log = ["dep:log"]

[dependencies]
defmt = { version = "0.3.10", optional = true }
log = { version = "0.4.22", optional = true }
embassy-net = { version = "0.7", features = [
  "dns",
  "medium-ip",
  "medium-ethernet",
  "proto-ipv4",
  "tcp",
] }
embassy-time = "0.4"
serde = { version = "1.0.217", default-features = false, features = [
  "derive",
], optional = true }
serde-json-core = { version = "0.6.0", optional = true }
embassy-futures = "0.1"
embassy-sync = "0.6"
embedded-io-async = "0.6"
mqttrs = { version = "0.4", default-features = false }
heapless = "0.7"
embedded-io = "0.6"
once_cell = { version = "1.20", default-features = false, features = [
  "critical-section",
] }
hex = { version = "0.4.3", default-features = false }
pin-project = "1.1"

[dev-dependencies]
futures-executor = { version = "0.3.31", features = ["thread-pool"] }
futures-test = "0.3.31"
futures-timer = "3.0.3"
futures-util = "0.3.31"
static_cell = "2.1.0"

# duplicate dependencies for testing
# these dependencies need the std featue in tests
embassy-sync = { version = "0.6.1", features = ["std"]}
